@@ -1,4 +1,6 @@
-usr/lib/*/*.so
-usr/lib/*/pkgconfig/
-usr/include/
-usr/share/gir-1.0/
+usr/lib/*/libcogl.so
+usr/lib/*/pkgconfig/cogl-gl-*
+usr/lib/*/pkgconfig/cogl-1.0.pc
+usr/lib/*/pkgconfig/cogl-2.0-experimental.pc
+usr/include/cogl/cogl/
+usr/share/gir-1.0/Cogl-*
