@@ -1,0 +1,4 @@
+usr/lib/*/libcogl-pango.so
+usr/lib/*/pkgconfig/cogl-pango-*
+usr/include/cogl/cogl-pango/
+usr/share/gir-1.0/CoglPango-*
