@@ -1,21 +1,3 @@
-libcogl-pango.so.0 libcogl5 #MINVER#
- cogl_pango_ensure_glyph_cache_for_layout@Base 1.7.4
- cogl_pango_font_map_clear_glyph_cache@Base 1.7.4
- cogl_pango_font_map_create_context@Base 1.7.4
- cogl_pango_font_map_get_renderer@Base 1.7.4
- cogl_pango_font_map_get_use_mipmapping@Base 1.7.4
- cogl_pango_font_map_new@Base 1.7.4
- cogl_pango_font_map_set_resolution@Base 1.7.4
- cogl_pango_font_map_set_use_mipmapping@Base 1.7.4
- cogl_pango_glyph_cache_clear@Base 1.7.4
- cogl_pango_glyph_cache_free@Base 1.7.4
- cogl_pango_glyph_cache_lookup@Base 1.7.4
- cogl_pango_glyph_cache_new@Base 1.7.4
- cogl_pango_render_layout@Base 1.7.4
- cogl_pango_render_layout_line@Base 1.7.4
- cogl_pango_render_layout_subpixel@Base 1.7.4
- cogl_pango_renderer_get_type@Base 1.7.4
- cogl_pango_renderer_slice_cb@Base 1.7.4
 libcogl.so.5 libcogl5 #MINVER#
  _cogl_atlas_add_reorganize_callback@Base 1.7.4
  _cogl_atlas_new@Base 1.7.4
